extra spaced fixed

--- a/media.css
+++ b/media.css
@@ -55,7 +55,7 @@
     height: 40vh;
   }
   #profile {
-    height: 83vh;
+    height: 66vh;
     margin-bottom: 0;
     margin-top: 8vw;
   }
